# STM32F1Learn

./: .gitignore  CMakeLists.txt  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Boot/: startup_stm32f103xb.s
Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
